--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 .DS_Store
 .env
+awscli-bundle/packages/awscli-1.42.16.tar.gz
+awscli-bundle/packages/botocore-1.40.16.tar.gz
+awscli-bundle/packages/colorama-0.4.5.tar.gz
+awscli-bundle/packages/docutils-0.19.tar.gz
+awscli-bundle/packages/jmespath-0.10.0.tar.gz
+awscli-bundle/packages/jmespath-1.0.1.tar.gz
+awscli-bundle/packages/pyasn1-0.6.1.tar.gz
+awscli-bundle/packages/python-dateutil-2.9.0.post0.tar.gz
+awscli-bundle/packages/pyyaml-6.0.2.tar.gz
+awscli-bundle/packages/rsa-4.7.2.tar.gz
+awscli-bundle/packages/s3transfer-0.13.1.tar.gz
+awscli-bundle/packages/six-1.17.0.tar.gz
+awscli-bundle/packages/urllib3-1.26.20.tar.gz
+awscli-bundle/packages/virtualenv-16.7.8.tar.gz
+awscli-bundle/packages/setup/setuptools_scm-3.3.3-py2.py3-none-any.whl
+awscli-bundle/packages/setup/setuptools-75.4.0-py3-none-any.whl
+awscli-bundle/packages/setup/wheel-0.45.1-py3-none-any.whl
+awscli-bundle/install
+awscli-bundle.zip
