--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,15 @@
     "dev": "react-scripts start"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "axios": "^1.6.0",
-    "react-calendar": "^4.6.0",
-    "react-router-dom": "^6.8.0",
     "framer-motion": "^10.16.0",
-    "react-icons": "^4.11.0"
+    "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -51,4 +52,3 @@
   "author": "AHMA Team",
   "license": "MIT"
 }
-
