include ocr debugging

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,146 @@ token.json
 .gitignore
 pdf/filled4.pdf
 .gitignore
+frontend/node_modules/.cache/.eslintcache
+frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/default-development/1.pack
+frontend/node_modules/.cache/default-development/2.pack
+frontend/node_modules/.cache/default-development/index.pack
+frontend/node_modules/.cache/default-development/index.pack.old
+frontend/node_modules/.cache/.eslintcache
+frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/default-development/1.pack
+frontend/node_modules/.cache/default-development/2.pack
+frontend/node_modules/.cache/default-development/index.pack
+frontend/node_modules/.cache/default-development/index.pack.old
+frontend/node_modules/typescript/package.json
+frontend/node_modules/typescript/README.md
+frontend/node_modules/typescript/SECURITY.md
+frontend/node_modules/typescript/ThirdPartyNoticeText.txt
+frontend/node_modules/typescript/lib/_tsc.js
+frontend/node_modules/typescript/lib/_tsserver.js
+frontend/node_modules/typescript/lib/_typingsInstaller.js
+frontend/node_modules/typescript/lib/lib.d.ts
+frontend/node_modules/typescript/lib/lib.decorators.d.ts
+frontend/node_modules/typescript/lib/lib.decorators.legacy.d.ts
+frontend/node_modules/typescript/lib/lib.dom.asynciterable.d.ts
+frontend/node_modules/typescript/lib/lib.dom.d.ts
+frontend/node_modules/typescript/lib/lib.dom.iterable.d.ts
+frontend/node_modules/typescript/lib/lib.es5.d.ts
+frontend/node_modules/typescript/lib/lib.es6.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.collection.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.core.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.generator.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.iterable.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.promise.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.proxy.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.reflect.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.symbol.d.ts
+frontend/node_modules/typescript/lib/lib.es2015.symbol.wellknown.d.ts
+frontend/node_modules/typescript/lib/lib.es2016.array.include.d.ts
+frontend/node_modules/typescript/lib/lib.es2016.d.ts
+frontend/node_modules/typescript/lib/lib.es2016.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2016.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.arraybuffer.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.date.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.object.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.sharedmemory.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.string.d.ts
+frontend/node_modules/typescript/lib/lib.es2017.typedarrays.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.asyncgenerator.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.asynciterable.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.promise.d.ts
+frontend/node_modules/typescript/lib/lib.es2018.regexp.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.array.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.object.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.string.d.ts
+frontend/node_modules/typescript/lib/lib.es2019.symbol.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.bigint.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.date.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.number.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.promise.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.sharedmemory.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.string.d.ts
+frontend/node_modules/typescript/lib/lib.es2020.symbol.wellknown.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.promise.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.string.d.ts
+frontend/node_modules/typescript/lib/lib.es2021.weakref.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.array.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.error.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.object.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.regexp.d.ts
+frontend/node_modules/typescript/lib/lib.es2022.string.d.ts
+frontend/node_modules/typescript/lib/lib.es2023.array.d.ts
+frontend/node_modules/typescript/lib/lib.es2023.collection.d.ts
+frontend/node_modules/typescript/lib/lib.es2023.d.ts
+frontend/node_modules/typescript/lib/lib.es2023.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2023.intl.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.arraybuffer.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.collection.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.full.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.object.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.promise.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.regexp.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.sharedmemory.d.ts
+frontend/node_modules/typescript/lib/lib.es2024.string.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.array.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.collection.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.decorators.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.disposable.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.error.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.float16.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.full.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.intl.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.iterator.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.promise.d.ts
+frontend/node_modules/typescript/lib/lib.esnext.sharedmemory.d.ts
+frontend/node_modules/typescript/lib/lib.scripthost.d.ts
+frontend/node_modules/typescript/lib/lib.webworker.asynciterable.d.ts
+frontend/node_modules/typescript/lib/lib.webworker.d.ts
+frontend/node_modules/typescript/lib/lib.webworker.importscripts.d.ts
+frontend/node_modules/typescript/lib/lib.webworker.iterable.d.ts
+frontend/node_modules/typescript/lib/tsc.js
+frontend/node_modules/typescript/lib/tsserver.js
+frontend/node_modules/typescript/lib/tsserverlibrary.d.ts
+frontend/node_modules/typescript/lib/tsserverlibrary.js
+frontend/node_modules/typescript/lib/typescript.d.ts
+frontend/node_modules/typescript/lib/typescript.js
+frontend/node_modules/typescript/lib/typesMap.json
+frontend/node_modules/typescript/lib/typingsInstaller.js
+frontend/node_modules/typescript/lib/watchGuard.js
+frontend/node_modules/typescript/lib/cs/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/de/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/es/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/fr/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/it/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/ja/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/ko/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/pl/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/pt-br/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/ru/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/tr/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/zh-cn/diagnosticMessages.generated.json
+frontend/node_modules/typescript/lib/zh-tw/diagnosticMessages.generated.json
+frontend/node_modules/typescript/README.md
+frontend/node_modules/.cache/default-development/2.pack
