--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,8 @@ frontend/node_modules/typescript/lib/zh-cn/diagnosticMessages.generated.json
 frontend/node_modules/typescript/lib/zh-tw/diagnosticMessages.generated.json
 frontend/node_modules/typescript/README.md
 frontend/node_modules/.cache/default-development/2.pack
+__pycache__/ahma_backend.cpython-311.pyc
+__pycache__/superagent_test.cpython-311.pyc
+__pycache__/superagent_test.cpython-313.pyc
+reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
+reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
