--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,4 @@ __pycache__/superagent_test.cpython-311.pyc
 __pycache__/superagent_test.cpython-313.pyc
 reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
 reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
+token.json
