--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ __pycache__/superagent_test.cpython-313.pyc
 reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
 reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
 token.json
+backend/backend.out
+reminders_agent/__pycache__/medicine_agent.cpython-313.pyc
